<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/d2" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/m1" android:layout_width="21dp" android:layout_height="27dp" android:layout_marginTop="8dp" android:text="@string/btn" android:onClick="m1clicked" android:layout_marginStart="8dp" app:cornerRadius="1000dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:shapeAppearance="@android:style/MediaButton"/>
    <Button android:id="@+id/m3" android:layout_width="17dp" android:layout_height="24dp" android:layout_marginTop="8dp" android:text="@string/btn" android:onClick="m3" android:layout_marginStart="8dp" app:cornerRadius="1000dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/m2" app:shapeAppearance="@android:style/MediaButton"/>
    <Button android:id="@+id/m4" android:layout_width="17dp" android:layout_height="24dp" android:layout_marginTop="8dp" android:text="@string/btn" android:onClick="OpenColorPallet" android:layout_marginStart="8dp" app:cornerRadius="1000dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/m3" app:shapeAppearance="@android:style/MediaButton"/>
    <Button android:id="@+id/m2" android:layout_width="17dp" android:layout_height="24dp" android:layout_marginTop="8dp" android:text="@string/btn" android:onClick="m2" android:layout_marginStart="8dp" app:cornerRadius="1000dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/m1" app:shapeAppearance="@android:style/MediaButton"/>
    <view android:id="@+id/view3" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0" class="com.kamal.lucid.Mycanvas1"/>
    <Button android:textColor="#000000" android:id="@+id/bub" android:layout_width="44dp" android:layout_height="40dp" android:layout_marginTop="8dp" android:text="@string/undo" android:onClick="bub" android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/brb" app:layout_constraintTop_toTopOf="parent"/>
    <Button android:textColor="#000000" android:id="@+id/brb" android:layout_width="42dp" android:layout_height="41dp" android:layout_marginTop="8dp" android:text="@string/redo" android:onClick="brb" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <SeekBar android:id="@+id/strokebar" android:background="#a8ececec" android:layout_width="261dp" android:layout_height="32dp" android:layout_marginTop="8dp" android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/m1" app:layout_constraintTop_toBottomOf="@+id/bstroke"/>
    <Button android:textColor="#000000" android:id="@+id/bstroke" android:background="#ffffff" android:layout_width="40dp" android:layout_height="41dp" android:layout_marginTop="8dp" android:text="@string/kkkkkkkkkk" android:onClick="bstroke" android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/m1" app:layout_constraintTop_toTopOf="parent"/>
    <Button android:id="@+id/pcb" android:layout_width="48dp" android:layout_height="36dp" android:layout_marginTop="8dp" android:text="@string/button1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/view3"/>
    <Button android:id="@+id/pdb" android:layout_width="43dp" android:layout_height="37dp" android:layout_marginTop="8dp" android:text="@string/button2" android:onClick="pagedown" android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/pcb" app:layout_constraintTop_toTopOf="parent"/>
    <Button android:id="@+id/pub" android:layout_width="43dp" android:layout_height="37dp" android:layout_marginTop="8dp" android:text="@string/button3" android:onClick="pageup" android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/pcb" app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
